--- a/mmseq_run/config/sim/simulation.yaml
+++ b/mmseq_run/config/sim/simulation.yaml
@@ -1,9 +1,9 @@
 simulation:
   timestep: 0.03
-  duration: 24.
+  duration: 25.
   gravity: [0, 0, -9.81]
 
-  pybullet_connection: "GUI"  # "Direct" or "GUI"
+  pybullet_connection: "DIRECT"  # "Direct" or "GUI"
 
   static_obstacles:
     enabled: False
@@ -49,29 +49,29 @@ planner:
   tasks:
     - name: "Base Pos 1"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [2., 0.]
+      target_pos: [1.5, 0.]
       tracking_err_tol: 0.5
     - name: "EE Pos 1"
       planner_type: "EESimplePlanner"
-      target_pos: [2., 1., 1.]
+      target_pos: [1.5, 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
     - name: "Base Pos 2"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [4., 0.]
+      target_pos: [3., 0.]
       tracking_err_tol: 0.5
     - name: "EE Pos 2"
       planner_type: "EESimplePlanner"
-      target_pos: [4., 1., 1.]
+      target_pos: [3., 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
     - name: "Base Pos 3"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [6., 0.]
+      target_pos: [4.5, 0.]
       tracking_err_tol: 0.5
     - name: "EE Pos 3"
       planner_type: "EESimplePlanner"
-      target_pos: [6., 1., 1.]
+      target_pos: [4.5, 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
 
@@ -80,6 +80,7 @@ controller:
   type: "SQP_TOL_SCHEDULE"
   HT_MaxIntvl: 1
   ST_MaxIntvl: 1
+  rate: 10 #hz
 
 include:
   - package: "mmseq_run"
@@ -88,6 +89,6 @@ include:
     path: "config/controller/HTMPC.yaml"
 
 logging:
-  log_dir: "$PROJECTMM3D_HOME/data/"
+  log_dir: "/home/tracy/Documents/PhD/data"
   log_level: 20 # 0 - not set, 10 - debug, 20 - info
 
