a few improvements. clamp cmd in HTMPC to avoid infeasible cmds after integration. sim ros cmds should be in body frame. added DataLogger to sim_ros and controller_ros.

--- a/mmseq_utils/CMakeLists.txt
+++ b/mmseq_utils/CMakeLists.txt
@@ -4,3 +4,15 @@ project(mmseq_utils)
 find_package(catkin REQUIRED)
 
 catkin_python_setup()
+
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES mmseq_control
+#  CATKIN_DEPENDS other_catkin_pkg
+#  DEPENDS system_lib
+)
+
+catkin_install_python(PROGRAMS
+   scripts/plot_logger_ros.py
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+ )
