--- a/mmseq_run/config/sim/simulation.yaml
+++ b/mmseq_run/config/sim/simulation.yaml
@@ -1,5 +1,5 @@
 simulation:
-  timestep: 0.03
+  timestep: 0.01
   duration: 25.
   gravity: [0, 0, -9.81]
 
@@ -49,38 +49,38 @@ planner:
   tasks:
     - name: "Base Pos 1"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [1.5, 0.]
-      tracking_err_tol: 0.5
+      target_pos: [2.0, 0.]
+      tracking_err_tol: 0.25
     - name: "EE Pos 1"
       planner_type: "EESimplePlanner"
-      target_pos: [1.5, 1., 1.]
+      target_pos: [2.0, 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
     - name: "Base Pos 2"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [3., 0.]
-      tracking_err_tol: 0.5
+      target_pos: [4., 0.]
+      tracking_err_tol: 0.25
     - name: "EE Pos 2"
       planner_type: "EESimplePlanner"
-      target_pos: [3., 1., 1.]
+      target_pos: [4., 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
     - name: "Base Pos 3"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [4.5, 0.]
-      tracking_err_tol: 0.5
+      target_pos: [6., 0.]
+      tracking_err_tol: 0.25
     - name: "EE Pos 3"
       planner_type: "EESimplePlanner"
-      target_pos: [4.5, 1., 1.]
+      target_pos: [6., 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
 
 controller:
-  sim_dt: 0.03
   type: "SQP_TOL_SCHEDULE"
   HT_MaxIntvl: 1
   ST_MaxIntvl: 1
-  rate: 10 #hz
+  rate: 30 #hz
+  slack: False
 
 include:
   - package: "mmseq_run"
