--- a/mmseq_run/config/controller/HTMPC.yaml
+++ b/mmseq_run/config/controller/HTMPC.yaml
@@ -24,7 +24,7 @@ controller:
       Qqb: 0.
       Qva: 0.01
       Qvb: 0.01
-      Qua: 0.001
+      Qua: 0.01
       Qub: 0.1
 
   # robot parameters
@@ -38,8 +38,8 @@ controller:
 
     limits:
       input:
-        lower: [ -1.1, -1.1, -1pi, -2.16, -2.16, -3.15, -3.2, -3.2, -3.2 ]
-        upper: [ 1.1, 1.1, 1pi, 2.16, 2.16, 3.15, 3.2, 3.2, 3.2  ]
+        lower: [ -0.5, -0.5, -0.5, -2.16, -2.16, -3.15, -3.2, -3.2, -3.2 ]
+        upper: [ 0.5, 0.5, 0.5, 2.16, 2.16, 3.15, 3.2, 3.2, 3.2  ]
       state:
         lower: [ -10, -10, -1pi, -1pi, -1pi, -1pi, -1pi, -1pi, -1pi,
                  -1.1, -1.1, -2, -2, -2, -3, -3, -3, -3]
