--- a/mmseq_run/config/sim/base_interactive.yaml
+++ b/mmseq_run/config/sim/base_interactive.yaml
@@ -1,6 +1,6 @@
 simulation:
   timestep: 0.01
-  duration: 25.
+  duration: 50.
   gravity: [0, 0, -9.81]
 
   pybullet_connection: "DIRECT"  # "Direct" or "GUI"
@@ -47,39 +47,22 @@ simulation:
 
 planner:
   tasks:
-#    - name: "Base Pos 1"
-#      planner_type: "BaseSingleWaypoint"
-#      target_pos: [2.0, 0.]
-#      tracking_err_tol: 0.25
     - name: "EE Pos 1"
       planner_type: "EESimplePlanner"
       target_pos: [2.0, 1., 1.]
       hold_period: 3.
       tracking_err_tol: 0.02
-    - name: "Base Pos 2"
+    - name: "Base Pos 1"
       planner_type: "BaseSingleWaypoint"
-      target_pos: [4., 0.]
+      target_pos: [2.0, 0.]
       tracking_err_tol: 0.25
-#    - name: "EE Pos 2"
-#      planner_type: "EESimplePlanner"
-#      target_pos: [4., 1., 1.]
-#      hold_period: 3.
-#      tracking_err_tol: 0.02
-#    - name: "Base Pos 3"
-#      planner_type: "BaseSingleWaypoint"
-#      target_pos: [6., 0.]
-#      tracking_err_tol: 0.25
-#    - name: "EE Pos 3"
-#      planner_type: "EESimplePlanner"
-#      target_pos: [6., 1., 1.]
-#      hold_period: 3.
-#      tracking_err_tol: 0.02
+
 
 controller:
   type: "SQP_TOL_SCHEDULE"
   HT_MaxIntvl: 1
   ST_MaxIntvl: 1
-  rate: 30 #hz
+  rate: 20 #hz
   slack: False
 
 include:
