--- a/mmseq_utils/CMakeLists.txt
+++ b/mmseq_utils/CMakeLists.txt
@@ -14,5 +14,6 @@ catkin_package(
 
 catkin_install_python(PROGRAMS
    scripts/plot_logger_ros.py
+   scripts/plot_logger_pybullet.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
