plot calibration results, ee tools and base.

--- a/mmseq_run/config/robot/thing.yaml
+++ b/mmseq_run/config/robot/thing.yaml
@@ -75,6 +75,7 @@ controller:
       - "ur10_arm_wrist_3_link"
       - "gripped_object"
     tool_link_name: "gripped_object"
+    base_link_name: "base"
     base_type: omnidirectional
 
     tool_vicon_name: "ThingContainer"
