--- a/mmseq_utils/CMakeLists.txt
+++ b/mmseq_utils/CMakeLists.txt
@@ -13,6 +13,7 @@ catkin_package(
 )
 
 catkin_install_python(PROGRAMS
+   scripts/plot_calibration_results.py
    scripts/plot_logger_ros.py
    scripts/plot_logger_pybullet.py
    scripts/plot_rosbag.py
