--- a/mmseq_run/config/controller/HTIDKC.yaml
+++ b/mmseq_run/config/controller/HTIDKC.yaml
@@ -10,14 +10,15 @@ controller:
   joint_acc_bound_enabled: True
   self_collision_avoidance_enabled: True
   static_obstacles_collision_avoidance_enabled: False
+  one_inequality_constraint_enabled: True
 
   # task parameters
   base_tracking:
-    κ: 0.5
+    κ: 1.
   ee_tracking:
-    κ: 0.5
+    κ: 1.
   joint_angle_bound:
-    κ: 0.05
+    κ: 0.01
   collision_avoidance:
-    κ: 0.05
+    κ: 0.01
     safety_margin: 0.05
