--- a/mmseq_run/config/sim/simulation.yaml
+++ b/mmseq_run/config/sim/simulation.yaml
@@ -4,9 +4,10 @@ simulation:
   gravity: [0, 0, -9.81]
 
   robot:
-    # home: [0, 0, 0, 0.5pi, -0.75pi, -0.5pi, -0.25pi, -0.5pi, 0.5pi]  # upright
-#    home: [ 0., -0, 0.pi, 0.5pi, -0.25pi, 0.5pi, -0.25pi, 0.5pi, 0.417pi ]  # standard
-    home: [ 0., -0, 0.pi, 0.5pi, -0.25pi, 0.5pi, 0.25pi, 0.5pi, 0.417pi ]  # grasping box directly
+#    home: [0, 0, 0, 0.5pi, -0.5pi, 0, -0.pi, 0.5pi, 0]  # upright
+#    home: [0, 0, 0, 0.5pi, 0., 0., 0., 0.5pi, 0.]  # upright
+    home: [ 0., -0, 0.pi, 0.5pi, -0.25pi, 0.5pi, -0.25pi, 0.5pi, 0.417pi ]  # standard
+#    home: [ -0., 0, 0.pi, 0.5pi, -0.25pi, 0.5pi, 0.25pi, 0.5pi, 0.417pi ]  # grasping box directly
     tool_vicon_name: ThingContainer
 
   pybullet_connection: "DIRECT"  # "Direct" or "GUI"
@@ -32,8 +33,8 @@ simulation:
         width: 1920
         height: 1080
     example2:
-      relative_target: [0, 0, 0.1]
-      relative_position: [0.4, -1, 0.6]
+      relative_target: [0.0, 0, 0.7]
+      relative_position: [5., -7., 6.]
     example3:
       target: [1.28, 0.045, 0.647]
       distance: 1.8
@@ -43,12 +44,16 @@ simulation:
 
   # Define videos to be captured during the simulation
   video:
-    save_frames: true
+    save_frames: false
     dir: "/home/tracy/Videos/MM-HTMPC/"
     timestep: 0.060
     views:
       -
-        camera: example1
+        camera: example2
         name: view1
+
+include:
+  - package: "mmseq_run"
+    path: "config/robot/thing.yaml"
 
 
