--- a/mmseq_run/config/ral/demo_dynamic.yaml
+++ b/mmseq_run/config/ral/demo_dynamic.yaml
@@ -1,13 +1,13 @@
 planner:
   sot_type: "SoTSequentialTasks"
-  vicon_mark_swarm_estimation_topic_name: "human_states"
+  vicon_mark_swarm_estimation_topic_name: "swarm_state"
   seat_pos:
-    - [-3, -3]
-    - [-3, 0]
-    - [-3, 3]
-    - [3, -3]
-    - [3, 0]
-    - [3, 3]
+    - [-2.75, -3]
+    - [-2.75, 0]
+    - [-2.75, 3]
+    - [2.75, -3]
+    - [2.75, 0]
+    - [2.75, 3]
   ee_target_pos_xy:
     - [-2, -3]
     - [-2, 0]
@@ -25,11 +25,74 @@ planner:
   base_tracking_err_tol: 0.5
   base_cruise_speed: 0.5
   initial_base_pos: [0, 0]
-  initial_waypoints_index: [0, 1, 5]  # index start from 0
-  initial_ee_target_pos_z: [0.8, 1.5, 0.8]
+  initial_waypoints_index: [0, 1, 4, 3]  # index start from 0
+  initial_ee_target_pos_z: [0.8, 1.25, 0.8, 0.8]
 
 simulation:
-  duration: 30
+  duration: 100
+  robot:
+    urdf:
+      package: "mmseq_assets"
+      path: "thing/urdf/thing_pyb.urdf"
+      includes:
+        - "$(find mobile_manipulation_central)/urdf/xacro/cartesian_base_joints.urdf.xacro"
+        - "$(find mobile_manipulation_central)/urdf/xacro/thing_no_wheels.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/end_effector_box.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/collision.urdf.xacro"
+      args:
+        use_collision: "false"
+        transform_params: "$(find mmseq_run)/config/robot/box_container.yaml"
+
+controller:
+  ee_upward_constraint_enabled: True
+
+    # soft constraints parameters
+  xu_soft:
+    mu: 0.001
+    zeta: 0.005
+  collision_soft:
+    mu: 0.0001
+    zeta: 0.005
+  ee_upward_soft:
+    mu: 0.001
+    zeta: 0.005
+
+  # weights for each cost function
+  cost_params:
+    EEPos3:
+      Qk: 1.0
+      P: 10.
+    BasePos2:
+      Qk: 1.
+      P: 10.
+    Effort:
+      Qqa: 0.
+      Qqb: 0.
+      Qva: 0.1
+      Qvb: 0.1
+      Qua: 0.01
+      Qub: 0.1
+      Qdua: 0.
+      Qdub: 0.05
+
+  robot:
+    limits:
+      state:
+        lower: [ -2, -10, -2.pi, -0.1pi, -1pi, -1pi, -1pi, -1pi, -1pi,
+                 -0.5, -0.5, -1, -0.5, -1, -2, -2, -2, -2]
+        upper: [ 2, 10, 2pi, 1.pi, 1pi, 1pi, 1pi, 1pi, 1pi,
+                 0.5, 0.5, 1, 0.5, 1, 2, 2, 2, 2 ]
+    urdf:
+      package: "mmseq_assets"
+      path: "thing/urdf/thing_ocs2.urdf"
+      includes:
+        - "$(find mobile_manipulation_central)/urdf/xacro/thing_no_wheels.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/end_effector_box.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/collision.urdf.xacro"
+      args:
+        use_collision: "True"
+        transform_params: "$(find mmseq_run)/config/robot/box_container.yaml"
+
 
 include:
   - package: "mmseq_run"
@@ -42,5 +105,5 @@ include:
     path: "config/scene/restaurant.yaml"
 
 logging:
-  log_dir: "/home/tracy/Documents/PhD/data/debug"
+  log_dir: "/home/tracy/Documents/PhD/data/demo"
   log_level: 20 # 0 - not set, 10 - debug, 20 - info
