--- a/mmseq_run/config/ral/demo_dynamic.yaml
+++ b/mmseq_run/config/ral/demo_dynamic.yaml
@@ -1,35 +1,54 @@
 planner:
   sot_type: "SoTSequentialTasks"
   vicon_mark_swarm_estimation_topic_name: "swarm_state"
+  use_joy: True
   seat_pos:
-    - [-2.75, -3]
-    - [-2.75, 0]
-    - [-2.75, 3]
-    - [2.75, -3]
-    - [2.75, 0]
-    - [2.75, 3]
+    - [0, -3]
+    - [-3.25, -1]
+    - [-3.25, 1]
+    - [0, 3]
+    - [3.25, 1]
+    - [3.25, -1]
+#    - [-2.75, -2.5]
+#    - [-2.75, 0]
+#    - [-2.75, 2.5]
+#    - [2.75, -2.5]
+#    - [2.75, 0]
+#    - [2.75, 2.5]
   ee_target_pos_xy:
-    - [-2, -3]
-    - [-2, 0]
-    - [-2, 3]
-    - [2, -3]
-    - [2, 0]
-    - [2, 3]
+    - [0, -2]
+    - [-2.5, -1]
+    - [-2.5, 1]
+    - [0, 2]
+    - [2.5, 1]
+    - [2.5, -1]
+#    - [-2, -3]
+#    - [-2, 0]
+#    - [-2, 3]
+#    - [2, -3]
+#    - [2, 0]
+#    - [2, 3]
   base_target_pos:
-    - [-0.5, -3]
-    - [-0.5, 0]
-    - [-0.5, 3]
-    - [ 0.5, -3 ]
-    - [ 0.5, 0 ]
-    - [ 0.5, 3 ]
+    - [0, -1.2]
+    - [-1.75, -0.703]
+    - [-1.75, 0.703]
+    - [0, 1.2]
+    - [1.75, 0.703]
+    - [1.75, -0.703]
+#    - [-0.5, -3]
+#    - [-0.5, 0]
+#    - [-0.5, 3]
+#    - [ 0.5, -3 ]
+#    - [ 0.5, 0 ]
+#    - [ 0.5, 3 ]
   base_tracking_err_tol: 0.5
   base_cruise_speed: 0.5
   initial_base_pos: [0, 0]
-  initial_waypoints_index: [0, 1, 4, 3]  # index start from 0
-  initial_ee_target_pos_z: [0.8, 1.25, 0.8, 0.8]
+  initial_waypoints_index: [5, 0, 2]  # index start from 0
+  initial_ee_target_pos_z: [1.0, 1.2, 0.8]
 
 simulation:
-  duration: 100
+  duration: 200
   robot:
     urdf:
       package: "mmseq_assets"
@@ -45,22 +64,26 @@ simulation:
 
 controller:
   ee_upward_constraint_enabled: True
+  collision_safety_margin: 0.2
+  ee_upward_deviation_angle_max: 0.17    #rad, 0.26 rad ~ 15 degree
+
+
 
     # soft constraints parameters
   xu_soft:
-    mu: 0.001
+    mu: 0.003
     zeta: 0.005
   collision_soft:
-    mu: 0.0001
+    mu: 0.001
     zeta: 0.005
   ee_upward_soft:
-    mu: 0.001
+    mu: 0.002
     zeta: 0.005
 
   # weights for each cost function
   cost_params:
     EEPos3:
-      Qk: 1.0
+      Qk: 0.5
       P: 10.
     BasePos2:
       Qk: 1.
@@ -70,7 +93,7 @@ controller:
       Qqb: 0.
       Qva: 0.1
       Qvb: 0.1
-      Qua: 0.01
+      Qua: 0.025
       Qub: 0.1
       Qdua: 0.
       Qdub: 0.05
@@ -78,10 +101,10 @@ controller:
   robot:
     limits:
       state:
-        lower: [ -2, -10, -2.pi, -0.1pi, -1pi, -1pi, -1pi, -1pi, -1pi,
-                 -0.5, -0.5, -1, -0.5, -1, -2, -2, -2, -2]
+        lower: [ -2, -10, -2.pi, -0.1pi, -1pi, -1pi, -1pi, 0.pi, -1pi,
+                 -0.5, -0.5, -1, -0.5, -1, -1., -2, -2, -2]
         upper: [ 2, 10, 2pi, 1.pi, 1pi, 1pi, 1pi, 1pi, 1pi,
-                 0.5, 0.5, 1, 0.5, 1, 2, 2, 2, 2 ]
+                 0.5, 0.5, 1, 0.5, 1, 1., 2, 2, 2 ]
     urdf:
       package: "mmseq_assets"
       path: "thing/urdf/thing_ocs2.urdf"
