Update SDF3DNew class. Separate out map creation and move it to the ros_interface.

--- a/mmseq_run/config/simple_experiment.yaml
+++ b/mmseq_run/config/simple_experiment.yaml
@@ -48,7 +48,7 @@ include:
   - package: "mmseq_run"
     path: "config/scene/empty.yaml"
   - package: "mmseq_run"
-    path: "config/map/sdf.yaml"
+    path: "config/map/SDF3D.yaml"
 
 logging:
   log_dir: "/home/tracy/Documents/PhD/data/debug"
