--- a/mmseq_run/config/controller/HTMPC.yaml
+++ b/mmseq_run/config/controller/HTMPC.yaml
@@ -59,3 +59,6 @@ controller:
   # line search parameters
   beta: 0.5
   alpha: 0.05
+
+  # ACADOS solver option
+  raise_exception_on_failure: True
