--- a/mmseq_run/config/ral/sequential.yaml
+++ b/mmseq_run/config/ral/sequential.yaml
@@ -39,7 +39,7 @@ include:
   - package: "mmseq_run"
     path: "config/robot/thing.yaml"
   - package: "mmseq_run"
-    path: "config/controller/HTMPC.yaml"
+    path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
     path: "config/sim/simulation.yaml"
   - package: "mmseq_run"
