--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -1,6 +1,7 @@
 controller:
   # HT-MPC Solver Type, lex vs SQP
-  type: "HTMPCSQP"
+  # HTMPCSQP, HTMPCSQPNEW, HTMPCLex
+  type: "HTMPC"
 
   # MPC params
   dt: 0.1
@@ -11,10 +12,10 @@ controller:
   ctrl_rate: 10 #hz
   cmd_vel_pub_rate: 100 # hz
   soft_cst: True
-  penalize_du: True
+  penalize_du: False
   self_collision_avoidance_enabled: True
   static_obstacles_collision_avoidance_enabled: False
-  sdf_collision_avoidance_enabled: True
+  sdf_collision_avoidance_enabled: False
   ee_upward_constraint_enabled: False
   cst_tol_schedule_enabled: False
   hierarchy_const_tol: 0.01
@@ -42,23 +43,27 @@ controller:
   cost_params:
     EEPos3:
       Qk: 1.0
-      P: 10.
+      P: 1
     BasePos2:
       Qk: 1.
-      P: 10.
+      P: 1
     Effort:
       Qqa: 0.
       Qqb: 0.
       Qva: 0.1
       Qvb: 0.1
-      Qua: 0.02
+      Qua: 0.01
       Qub: 0.1
       Qdua: 0.
       Qdub: 0.1
+    Regularization:
+      eps: 0.0001
 
   # line search parameters
   beta: 0.5
   alpha: 0.05
 
   # ACADOS solver option
-  raise_exception_on_failure: True
+  raise_exception_on_failure: False
+  use_custom_hess: True
+  use_terminal_cost: False
