--- a/mmseq_run/config/ral/demo_dynamic.yaml
+++ b/mmseq_run/config/ral/demo_dynamic.yaml
@@ -26,7 +26,7 @@ planner:
     - [1.75, 0.703]
     - [1.75, -0.703]
 
-  base_tracking_err_tol: 0.8
+  base_tracking_err_tol: 0.2
   base_cruise_speed: 0.5
   initial_base_pos: [0, 0]
   initial_waypoints_index: [3, 5, 1]  # index start from 0
@@ -49,7 +49,8 @@ simulation:
 
 controller:
   ee_upward_constraint_enabled: True
-  collision_safety_margin: 0.2
+  collision_safety_margin: 
+    self: 0.2
   ee_upward_deviation_angle_max: 0.26    #rad, 0.26 rad ~ 15 degree
 
 
@@ -59,8 +60,9 @@ controller:
     mu: 0.003
     zeta: 0.005
   collision_soft:
-    mu: 0.001
-    zeta: 0.005
+    self:
+      mu: 0.001
+      zeta: 0.005
   ee_upward_soft:
     mu: 0.001
     zeta: 0.01
@@ -76,7 +78,7 @@ controller:
     Effort:
       Qqa: 0.
       Qqb: 0.
-      Qva: 0.1
+      Qva: 0.2
       Qvb: 0.1
       Qua: 0.025
       Qub: 0.1
@@ -106,7 +108,7 @@ include:
   - package: "mmseq_run"
     path: "config/robot/thing.yaml"
   - package: "mmseq_run"
-    path: "config/controller/HTMPC.yaml"
+    path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
     path: "config/sim/simulation.yaml"
   - package: "mmseq_run"
