--- a/mmseq_run/config/ral/self_collision_avoidance.yaml
+++ b/mmseq_run/config/ral/self_collision_avoidance.yaml
@@ -13,17 +13,21 @@ planner:
       target_pos: [4.0, 0.]
       tracking_err_tol: 0.25
 
-
+controller:
+  home: "default"
+  
 include:
   - package: "mmseq_run"
     path: "config/robot/thing.yaml"
   - package: "mmseq_run"
-    path: "config/controller/HTMPC.yaml"
+    path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
     path: "config/sim/simulation.yaml"
   - package: "mmseq_run"
     path: "config/scene/empty.yaml"
+  - package: "mmseq_run"
+    path: "config/map/SDF2D.yaml"
 
 logging:
-  log_dir: "/home/tracy/Documents/PhD/data/debug"
+  log_dir: "/home/tracy/PhD/data/self_collision"
   log_level: 4 # 0 - not set, 10 - debug, 20 - info
