--- a/mmseq_run/config/simple_experiment.yaml
+++ b/mmseq_run/config/simple_experiment.yaml
@@ -1,21 +1,39 @@
 planner:
   sot_type: "SoTStatic"
   tasks:
-   - name: "EE Pos 1"
-     planner_type: "EESimplePlannerBaseFrame"
-     frame_id: "base"
-     target_pos: [0., 0.8, 0.8]
-     hold_period: 3.
-     tracking_err_tol: 0.02
-#   - name: "Base Pos 1"
-#     planner_type: "BasePoseTrajectoryLine"
-#     frame_id: "base"
-#     initial_pose: [0, 0, 0]
-#     target_pose: [-0.5, 0., 1.57]
-#     cruise_speed: 0.5
-#     yaw_speed: 0.5
-#     tracking_err_tol: 0.25
-
+  - name: "EE Pos 1"
+    planner_type: "EESimplePlanner"
+    frame_id: "EE"
+    initial_pos: [0.0, -0.0, 0.0]
+    target_pos: [0.0, 0.5, 0.0]
+    hold_period: 3.
+    tracking_err_tol: 0.02
+    cruise_speed: 0.5
+  - frame_id: base
+    name: Base Position
+    planner_type: BaseSingleWaypoint
+    target_pos:
+    - -1.5
+    - 0.
+    tracking_err_tol: 0.02
+  # - frame_id: base
+  #   name: Base Position
+  #   planner_type: BasePosTrajectoryLine
+  #   initial_pos: [0,0]
+  #   target_pos:
+  #   - 2.5
+  #   - 0.4
+  #   cruise_speed: 1.0
+  #   tracking_err_tol: 0.2
+  # - frame_id: base
+  #   name: Base Position
+  #   planner_type: BasePosTrajectoryLine
+  #   initial_pos: [2.5,0.4]
+  #   target_pos:
+  #   - 5.
+  #   - 0.25
+  #   cruise_speed: 1.0
+  #   tracking_err_tol: 0.02
    # - name: "EE Circle 1 "
    #   planner_type: "EEPosTrajectoryCircle"
    #   frame_id: "EE"
@@ -26,30 +44,27 @@ planner:
    #   radius: 0.5
    #   angular_offset: 1.1pi
    #   tracking_err_tol: 0.02
-    # - name: "Base Circle 1 "
-    #   planner_type: "BasePosTrajectoryCircle"
-    #   frame_id: "base"
-    #   period: 3.
-    #   round: 2
-    #   plane_id: [1, 2 ]
-    #   center: [ 0.5, 0.0]
-    #   radius: 0.5
-    #   angular_offset: 1.0pi
-    #   tracking_err_tol: 0.02
-
+  # - name: "Base Circle 1 "
+  #   planner_type: "BasePosTrajectoryCircle"
+  #   frame_id: "base"
+  #   period: 10.
+  #   round: 2
+  #   plane_id: [1, 2 ]
+  #   center: [ -0.5, 0.0]
+  #   radius: 0.5
+  #   angular_offset: 0.0pi
+  #   tracking_err_tol: 0.02
 
 include:
   - package: "mmseq_run"
     path: "config/robot/thing.yaml"
   - package: "mmseq_run"
-    path: "config/controller/HTMPC.yaml"
+    path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
     path: "config/sim/simulation.yaml"
   - package: "mmseq_run"
     path: "config/scene/empty.yaml"
-  - package: "mmseq_run"
-    path: "config/map/SDF3D.yaml"
 
 logging:
-  log_dir: "/home/tracy/Documents/PhD/data/debug"
-  log_level: 4 # 0 - not set, 10 - debug, 20 - info
+  log_dir: "/home/tracy/PhD/data/run_time"
+  log_level: 10 # 0 - not set, 10 - debug, 20 - info
