A few minor changes. Config file updates related to isaac sim. rviz updates. isaac sim launch file updates

--- a/mmseq_run/config/3d_collision.yaml
+++ b/mmseq_run/config/3d_collision.yaml
@@ -55,7 +55,7 @@ include:
   - package: "mmseq_run"
     path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
-    path: "config/sim/simulation.yaml"
+    path: "config/sim/isaac_sim.yaml"
   - package: "mmseq_run"
     path: "config/scene/empty.yaml"
   - package: "mmseq_run"
