--- a/mmseq_run/config/robot/thing.yaml
+++ b/mmseq_run/config/robot/thing.yaml
@@ -31,12 +31,12 @@ simulation:
 #      package: "mmseq_assets"
 #      path: "thing/urdf/mm_pyb_fingers.urdf"
       package: "mmseq_assets"
-      path: "thing/urdf/thing_pyb.urdf"
+      path: "thing/urdf/thing_sim.urdf"
       includes:
         - "$(find mobile_manipulation_central)/urdf/xacro/cartesian_base_joints.urdf.xacro"
         - "$(find mobile_manipulation_central)/urdf/xacro/thing_no_wheels.urdf.xacro"
-        - "$(find mmseq_assets)/thing/xacro/end_effector_fingers.urdf.xacro"
-        - "$(find mmseq_assets)/thing/xacro/collision.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/end_effector_empty.urdf.xacro"
+        - "$(find mmseq_assets)/thing/xacro/arm_coverage.urdf.xacro"
       args:
         use_collision: "false"
         transform_params: "$(find mobile_manipulation_central)/config/null_transforms.yaml"
@@ -103,7 +103,7 @@ controller:
 
     urdf:
       package: "mmseq_assets"
-      path: "thing/urdf/thing_ocs2.urdf"
+      path: "thing/urdf/thing_ctrl.urdf"
       includes:
         - "$(find mobile_manipulation_central)/urdf/xacro/thing_no_wheels.urdf.xacro"
         - "$(find mmseq_assets)/thing/xacro/end_effector_fingers.urdf.xacro"
