--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -1,7 +1,7 @@
 controller:
   # HT-MPC Solver Type, lex vs SQP
   # HTMPCSQP, HTMPCSQPNEW, HTMPCLex
-  type: "HTMPC"
+  type: "STMPC"
 
   # MPC params
   dt: 0.1
@@ -13,9 +13,9 @@ controller:
   cmd_vel_pub_rate: 100 # hz
   soft_cst: True
   penalize_du: False
-  self_collision_avoidance_enabled: True
+  self_collision_avoidance_enabled: False
   static_obstacles_collision_avoidance_enabled: False
-  sdf_collision_avoidance_enabled: False
+  sdf_collision_avoidance_enabled: True
   ee_upward_constraint_enabled: False
   cst_tol_schedule_enabled: False
   hierarchy_const_tol: 0.001
@@ -27,7 +27,7 @@ controller:
     sdf: True
   
   collision_safety_margin:
-    self: 0.05
+    self: 0.15
     sdf: 0.15
   # soft constraints parameters
   xu_soft:
@@ -50,7 +50,7 @@ controller:
       Qk: 10.0
       P: 1
     BasePos2:
-      Qk: 10.
+      Qk: 1.
       P: 1
     Effort:
       Qqa: 0.
@@ -62,7 +62,7 @@ controller:
       Qdua: 0.
       Qdub: 0.1
     Regularization:
-      eps: 0.00
+      eps: 1.0e-06
 
   # line search parameters
   beta: 0.5
@@ -74,20 +74,21 @@ controller:
     use_custom_hess: True
     use_terminal_cost: False
     ocp_solver_options:
-      qp_solver: "FULL_CONDENSING_QPOASES"
+      qp_solver: "PARTIAL_CONDENSING_HPIPM"
       # FULL_CONDENSING_QPOASES
       # PARTIAL_CONDENSING_HPIPM, FULL_CONDENSING_QPOASES, FULL_CONDENSING_HPIPM,
       # PARTIAL_CONDENSING_QPDUNES, PARTIAL_CONDENSING_OSQP, FULL_CONDENSING_DAQP
       hessian_approx: "GAUSS_NEWTON"
       integrator_type: "IRK"
-      print_level: 1
+      print_level: 0
       nlp_solver_type: "SQP"  #SQP_RTI, SQP
       globalization: "MERIT_BACKTRACKING"
       qp_solver_iter_max: 100
       nlp_solver_tol_stat: 1.0e-05
       nlp_solver_tol_eq: 1.0e-03
       nlp_solver_tol_ineq: 1.0e-04
-      qp_solver_warm_start: False
+      nlp_solver_iter_max: 100
+      qp_solver_warm_start: 1
     slack_enabled:
       x: True
       x_e: True
