--- a/mmseq_run/config/2d_collision.yaml
+++ b/mmseq_run/config/2d_collision.yaml
@@ -32,6 +32,16 @@ controller:
     self: False
     sdf: False
     static_obstacles: False
+  acados:
+    ocp_solver_options:
+      nlp_solver_max_iter: 200
+      qp_solver_warm_start: 1
+    slack_enabled:
+      x: True
+      x_e: True
+      h_0: True
+      h: False
+      h_e: False
 
 simulation:
   static_obstacles:
