--- a/mmseq_run/config/3d_collision.yaml
+++ b/mmseq_run/config/3d_collision.yaml
@@ -1,53 +1,44 @@
 planner:
   sot_type: "SoTStatic"
   tasks:
-  # - name: "EE Pos 1"
-  #   planner_type: "EEPosTrajectoryLine"
-  #   frame_id: "base"
-  #   initial_pos: [0.7, -0.91, 0.7]
-  #   target_pos: [1.0, 0.5, 0.5]
-  #   hold_period: 3.
-  #   tracking_err_tol: 0.02
-  #   cruise_speed: 0.5
-  # - frame_id: base
-  #   name: Base Position
-  #   planner_type: BaseSingleWaypoint
-  #   target_pos:
-  #   - 0
-  #   - 0.
-  #   tracking_err_tol: 0.02
-  - frame_id: base
-    name: Base Position
-    planner_type: BasePosTrajectoryLine
-    initial_pos: [0,0]
-    target_pos:
-    - 1.0
-    - 0.5
-    cruise_speed: 1.0
-    tracking_err_tol: 0.4
-  - frame_id: base
-    name: Base Position
-    planner_type: BasePosTrajectoryLine
-    initial_pos: [1,0.5]
-    target_pos:
-    - 2.5
-    - 0.5
-    cruise_speed: 1.0
-    tracking_err_tol: 0.4
-  - frame_id: base
-    name: Base Position
-    planner_type: BasePosTrajectoryLine
-    initial_pos: [2.5,0.5]
-    target_pos:
-    - 4.0
-    - 0.0
-    cruise_speed: 1.0
-    tracking_err_tol: 0.4
+  - name: "EE Pos 1"
+    planner_type: "EESimplePlanner"
+    frame_id: "EE"
+    initial_pos: [0.0, -0.0, 0.0]
+    target_pos: [0.0, 1.0, 0.0]
+    hold_period: 3.
+    tracking_err_tol: 0.02
+    cruise_speed: 0.5
+
+simulation:
+  robot:
+    home: [0, -0, 0, 0.25pi, -0.25pi, 0.5pi, -0.25pi, 0.5pi, 0.417pi]  # standard
+  static_obstacles:
+    enabled: True
 
 controller:
   home: "default"
-  sdf_collision_avoidance_enabled: True
+  sdf_collision_avoidance_enabled: False
+  self_collision_avoidance_enabled: False
+  static_obstacles_collision_avoidance_enabled: True
+  
+  collision_constraints_softend:
+    self: False
+    sdf: False
+    static_obstacles: False
+
+  collision_constraint_type: "SignedDistanceConstraintCBF" # SignedDistanceConstraint or SignedDistanceConstraintCBF 
   type: "STMPC"
+  acados:
+    ocp_solver_options:
+      nlp_solver_max_iter: 100
+      qp_solver_warm_start: 1
+    slack_enabled:
+      x: True
+      x_e: True
+      h_0: True
+      h: True
+      h_e: False
 
 include:
   - package: "mmseq_run"
@@ -55,9 +46,9 @@ include:
   - package: "mmseq_run"
     path: "config/controller/MPC.yaml"
   - package: "mmseq_run"
-    path: "config/sim/isaac_sim.yaml"
+    path: "config/sim/simulation.yaml"
   - package: "mmseq_run"
-    path: "config/scene/empty.yaml"
+    path: "config/scene/simple_obstacles.yaml"
   - package: "mmseq_run"
     path: "config/map/SDF3D.yaml"
 
