--- a/mmseq_run/config/3d_collision_sdf.yaml
+++ b/mmseq_run/config/3d_collision_sdf.yaml
@@ -1,15 +1,23 @@
 planner:
   sot_type: "SoTStatic"
   tasks:
-  - frame_id: base
-    name: Base Position
-    planner_type: BaseSingleWaypoint
-    initial_pos: [0,0]
-    target_pos:
-    - 6.0
-    - 0.0
+  - name: "EE Pos 1"
+    planner_type: "EEPosTrajectoryLine"
+    frame_id: "EE"
+    initial_pos: [0.0, -0.0, 0.0]
+    target_pos: [-0.0, 2.0, 0.0]
+    hold_period: 3.
+    tracking_err_tol: 0.02
     cruise_speed: 0.5
-    tracking_err_tol: 0.4
+  # - frame_id: base
+  #   name: Base Position
+  #   planner_type: BasePosTrajectoryLine
+  #   initial_pos: [0,0]
+  #   target_pos:
+  #   - 3.0
+  #   - 0.0
+  #   cruise_speed: 0.5
+  #   tracking_err_tol: 0.4
   # - frame_id: base
   #   name: Base Position
   #   planner_type: BasePosTrajectoryLine
@@ -19,6 +27,9 @@ planner:
   #   - 0.
   #   cruise_speed: 1.0
   #   tracking_err_tol: 0.4
+simulation:
+  robot:
+    home: [0., -0, 0, 0.25pi, -0.25pi, 0.5pi, -0.25pi, 0.5pi, 0.417pi]  # standard
 
 controller:
   home: "default"
@@ -34,11 +45,12 @@ controller:
     static_obstacles: False
   acados:
     ocp_solver_options:
-      nlp_solver_max_iter: 100
+      nlp_solver_max_iter: 30
       qp_solver_warm_start: 2
     slack_enabled:
       x: True
       x_e: True
+      u: False
       h_0: True
       h: False
       h_e: False
