--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -15,8 +15,8 @@ controller:
   soft_cst: True
   penalize_du: False
   self_collision_avoidance_enabled: False
-  static_obstacles_collision_avoidance_enabled: False
   sdf_collision_avoidance_enabled: False
+  static_obstacles_collision_avoidance_enabled: False
   ee_upward_constraint_enabled: False
   cst_tol_schedule_enabled: False
   hierarchy_const_tol: 0.001
@@ -97,11 +97,13 @@ controller:
       nlp_solver_tol_stat: 1.0e-03
       nlp_solver_tol_eq: 1.0e-03
       nlp_solver_tol_ineq: 1.0e-02
-      nlp_solver_iter_max: 100
-      qp_solver_warm_start: 1
+      nlp_solver_max_iter: 50
+      qp_solver_warm_start: 2
+      nlp_solver_ext_qp_res: 0
     slack_enabled:
       x: True
       x_e: True
+      u: True
       h_0: True
       h: False
       h_e: False
