--- a/mmseq_run/config/3d_collision_sdf.yaml
+++ b/mmseq_run/config/3d_collision_sdf.yaml
@@ -8,7 +8,7 @@ planner:
   #   target_pos: [-0.0, 2.0, 0.0]
   #   hold_period: 3.
   #   tracking_err_tol: 0.02
-  #   cruise_speed: 0.5
+  #   cruise_speed: 0.75
   - frame_id: base
     name: Base Position
     planner_type: BasePosTrajectoryLine
@@ -16,7 +16,7 @@ planner:
     target_pos:
     - 3.0
     - 0.0
-    cruise_speed: 0.5
+    cruise_speed: 0.2
     tracking_err_tol: 0.4
   # - frame_id: base
   #   name: Base Position
@@ -29,7 +29,8 @@ planner:
   #   tracking_err_tol: 0.4
 simulation:
   robot:
-    home: [0., -0, 0, 0.5pi, -0.75pi, 0.75pi, -0.25pi, 0.5pi, 0.417pi]  # standard
+    home: [0., -0.2, 0, 0.5pi, -0.75pi, 0.75pi, -0.25pi, 0.5pi, 0.417pi]  # standard
+    # home: [0.0, -0.0, 0, 0.7854, -0.7854, 1.57, -0.7854,  1.5708, 1.31]
 
 controller:
   home: "default"
@@ -43,16 +44,18 @@ controller:
     self: False
     sdf: False
     static_obstacles: False
+  collision_cbf_gamma: 0.9
+  
   acados:
     ocp_solver_options:
-      nlp_solver_max_iter: 30
+      nlp_solver_max_iter: 100
       qp_solver_warm_start: 2
     slack_enabled:
       x: True
       x_e: True
       u: False
       h_0: True
-      h: False
+      h: True
       h_e: False
 include:
   - package: "mmseq_run"
@@ -67,5 +70,5 @@ include:
     path: "config/map/SDF3D.yaml"
 
 logging:
-  log_dir: "/home/tracy/PhD/data/3d_collision"
+  log_dir: "/home/tracy/PhD/data/Aug31"
   log_level: 10 # 0 - not set, 10 - debug, 20 - info
