--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -22,6 +22,7 @@ controller:
   cst_tol_schedule_enabled: False
   base_pose_tracking_enabled: True
   hierarchy_const_tol: 0.001
+  self_collision_emergency_stop: True
 
   ee_upward_deviation_angle_max: 0.20    #rad, 0.26 rad ~ 15 degree
   
