--- a/mmseq_run/config/3d_collision_sdf_planner.yaml
+++ b/mmseq_run/config/3d_collision_sdf_planner.yaml
@@ -6,8 +6,9 @@ planner:
     planner_type: ROSTrajectoryPlanner
     cruise_speed: 0.4
     yaw_speed: 1
+    yaw_accel: 1
     tracking_err_tol: 0.4
-    ref_traj_duration: 1.0
+    ref_traj_duration: 1.5
   # - name: "EE Pos 1"
   #   planner_type: "EEPosTrajectoryLine"
   #   frame_id: "EE"
