--- a/mmseq_control_new/CMakeLists.txt
+++ b/mmseq_control_new/CMakeLists.txt
@@ -194,6 +194,7 @@ include_directories(
 
 catkin_install_python(PROGRAMS
             scripts/test_cost_functions.py
+            scripts/mpc_generate_c_code.py
             DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
           )
 
