--- a/mmseq_run/config/3d_collision_sdf_planner.yaml
+++ b/mmseq_run/config/3d_collision_sdf_planner.yaml
@@ -48,6 +48,7 @@ controller:
   sdf_collision_avoidance_enabled: True
   self_collision_avoidance_enabled: True
   static_obstacles_collision_avoidance_enabled: True
+  base_pose_tracking_enabled: True
 
   collision_constraint_type: "SignedDistanceConstraint" # SignedDistanceConstraint or SignedDistanceConstraintCBF 
   type: "STMPC"
@@ -58,6 +59,7 @@ controller:
   collision_cbf_gamma: 0.9
   
   acados:
+    name: MMCtrlSLAM
     ocp_solver_options:
       nlp_solver_max_iter: 100
       qp_solver_warm_start: 2
@@ -67,7 +69,7 @@ controller:
       u: False
       h_0: True
       h: True
-      h_e: False
+      h_e: True
 include:
   - package: "mmseq_run"
     path: "config/robot/thing.yaml"
