default to load precompiled controller; increase map height to 1.4m

--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -107,7 +107,7 @@ controller:
   # ACADOS solver option
   acados:
     cython:
-      enabled: False
+      enabled: True
       action: "load"      # load or generate
     raise_exception_on_failure: False
     use_custom_hess: True
