--- a/mmseq_run/config/controller/MPC.yaml
+++ b/mmseq_run/config/controller/MPC.yaml
@@ -28,10 +28,15 @@ controller:
 
   ee_upward_deviation_angle_max: 0.20    #rad, 0.26 rad ~ 15 degree
   
+  collision_constraint_type: 
+    self: "SignedDistanceConstraint" # SignedDistanceConstraint or SignedDistanceConstraintCBF 
+    sdf: "SignedDistanceConstraintCBF"
+    static_obstacles: "SignedDistanceConstraint"
+
   collision_constraints_softend:
     self: False
-    sdf: True
-    static_obstacles: True
+    sdf: False
+    static_obstacles: False
   
   collision_safety_margin:
     self: 0.25
@@ -53,8 +58,11 @@ controller:
       mu: 0.0001
       zeta: 0.005 
   
-  collision_cbf_gamma: 0.9
-  
+  collision_cbf_gamma:
+    sdf: 0.9
+    self: 0.9
+    static_obstacles: 0.9
+
   ee_upward_soft:
     mu: 0.001
     zeta: 0.01
