--- a/mmseq_run/config/controller/mpc_params/ctrl_slam_Sep19.yaml
+++ b/mmseq_run/config/controller/mpc_params/ctrl_slam_Sep19.yaml
@@ -3,7 +3,8 @@ controller:
   prediction_horizon: 2
   robot:
     time_discretization_dt: 0.2
-
+  collision_cbf_gamma:
+    sdf: 0.9
   cost_params:
     EEPos3:
       Qk: [3, 3, 3]
@@ -18,7 +19,7 @@ controller:
       Qk: [3, 3, 3]
       P: [1, 1, 1]
     BasePoseSE2:
-      Qk: [3, 3, 3]
+      Qk: [3, 3, 0.25]
       P: [1, 1, 1]
     EEVel3:
       Qk: [1, 1, 1]
@@ -27,7 +28,7 @@ controller:
       Qk: [1, 1]
       P: [1, 1]
     BaseVel3:
-      Qk: [1, 1, 1]
+      Qk: [0.3, 0.3, 0.3]
       P: [1, 1, 1]
     Effort:
       Qqa: [0, 0, 0, 0, 0, 0]
